# mcp-audit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: sample-output.md
src/mcp_audit/: __init__.py  analyzer.py  cli.py  discovery.py  parser.py  reporter.py
src/mcp_audit/rules/: __init__.py  dormant.py  overlap.py  permission_scope.py  secret_leak.py
tests/: test_analyzer.py  test_cli.py  test_discovery.py  test_reporter.py
tests/fixtures/broken/: .mcp.json
tests/fixtures/clean/: .mcp.json
tests/fixtures/dormant/: .mcp.json
tests/fixtures/leaky/: .mcp.json
tests/fixtures/permissions/: .mcp.json
tests/fixtures/permissions/.claude/: settings.json
tests/fixtures/wildcard/: .mcp.json
