[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-audit"
version = "0.1.0"
description = "Audit your Claude Code MCP servers: spot leaked keys, dormant servers, and overly-permissive configs. Read-only, offline, paranoid by default."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "mcp-audit contributors" },
]
keywords = ["mcp", "claude", "claude-code", "audit", "security", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
mcp-audit = "mcp_audit.cli:main"

[project.urls]
Homepage = "https://github.com/yli769227-jpg/mcp-audit"
Issues = "https://github.com/yli769227-jpg/mcp-audit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
